--- a/config.properties
+++ b/config.properties
@@ -4,7 +4,7 @@ db.port=3306
 db.account=eagle
 db.password=eagle
 db.schema=load_balance
-#多个表以,分割
+#多个表以,分割,目前不支持正则
 db.tables=*
 db.charset=utf8
 
